diseño responsivo para tablet V1

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <main class="contenido">
+        <img class="logo-alura" alt="">
         <section class="contenido__seccion__izq">
-            <textarea name="" id="" placeholder="Ingrese el texto aqui ..."></textarea>
+            <textarea name="" id="" placeholder="Ingrese el texto aqui"></textarea>
             <span>Solo letras minúsculas y sin acentos</span>
             <div class="contenido__seccion__izq__div__botones">
                 <button class="botones_seccion_izq" id="btn-encriptar">Encriptar</button>
