diseños basicos desktop, tablet, movil

--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
                 <p class="texto_descripcion">Ingresa el texto que desees encriptar o desencriptar.</p>
             </div>
         </section>
+        <section class="contenido__seccion__desencriptado">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Orci montes, sit et diam risus scelerisque vitae est.
+                Tortor maecenas nunc ut laoreet. Eget diam mauris quam
+                quisque ut eget fringilla sit elit. Libero, sodales duis
+                fames id diam feugiat aliquet non egestas.
+            </p>
+            <button class="" id="btn-copiar">Copiar</button>
+        </section>
     </main>
     <footer>
         <p>Desarrollado por Fernando Hoyos - 2024</p>
