aplicando paletas de colores y estilos

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main class="contenido">
-        <img class="logo-alura" alt="">
+        <img class="logo__alura">
         <section class="contenido__seccion__izq">
             <textarea name="" id="" placeholder="Ingrese el texto aqui"></textarea>
             <span>Solo letras minúsculas y sin acentos</span>
@@ -18,14 +18,14 @@
             </div>
         </section>
         <section class="contenido__seccion__der">
-            <img class="imagen__persona" src="assets/img-persona.png" alt="">
+            <img class="imagen__persona" src="assets/img-persona.png" alt="persona buscando algo">
             <div class="contenedor__textos__seccion__der">
                 <p class="texto_titulo">Ningún mensaje fue encontrado</p>
                 <p class="texto_descripcion">Ingresa el texto que desees encriptar o desencriptar.</p>
             </div>
         </section>
         <section class="contenido__seccion__desencriptado">
-            <p>
+            <p class="texto_desencriptado">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Orci montes, sit et diam risus scelerisque vitae est.
                 Tortor maecenas nunc ut laoreet. Eget diam mauris quam
