--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <main class="contenido">
-        <img class="logo__alura">
+        <picture class="logo__alura"></picture>
         <section class="contenido__seccion__izq">
             <textarea name="" id="" placeholder="Ingrese el texto aqui"></textarea>
-            <span>Solo letras minúsculas y sin acentos</span>
+            <span class="contenido__span__alerta">
+                <picture id="icono-span"></picture>
+                <p id="texto-span">Solo letras minúsculas y sin acentos</p>
+            </span>
             <div class="contenido__seccion__izq__div__botones">
                 <button class="botones_seccion_izq" id="btn-encriptar">Encriptar</button>
                 <button class="botones_seccion_izq" id="btn-desencriptar">Desencriptar</button>
@@ -36,7 +39,8 @@
         </section>
     </main>
     <footer>
-        <p>Desarrollado por Fernando Hoyos - 2024</p>
+        <p>Desarrollado por: Fernando luis Hoyos Hernandez</p>
+        <p>2024</p>
     </footer>
     <script src="js/app.js"></script>
 </body>
