add funcion encriptar y capturar cadena de textarea

--- a/index.html
+++ b/index.html
@@ -28,13 +28,14 @@
             </div>
         </section>
         <section class="contenido__seccion__desencriptado">
-            <p class="texto_desencriptado">
+            <p class="texto_desencriptado"></p>
+            <!-- <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Orci montes, sit et diam risus scelerisque vitae est.
                 Tortor maecenas nunc ut laoreet. Eget diam mauris quam
                 quisque ut eget fringilla sit elit. Libero, sodales duis
                 fames id diam feugiat aliquet non egestas.
-            </p>
+            </p> -->
             <button class="" id="btn-copiar">Copiar</button>
         </section>
     </main>
