add funcion boton copiar, ajuste textarea derecho

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main class="contenido">
         <picture class="logo__alura"></picture>
         <section class="contenido__seccion__izq">
-            <textarea name="" id="" placeholder="Ingrese el texto aqui"></textarea>
+            <textarea class="contenido__texto__usuario" placeholder="Ingrese el texto aqui"></textarea>
             <span class="contenido__span__alerta">
                 <picture id="icono-span"></picture>
                 <p id="texto-span">Solo letras minúsculas y sin acentos</p>
@@ -28,9 +28,9 @@
             </div>
         </section>
         <section class="contenido__seccion__desencriptado">
-            <p class="texto_desencriptado"></p>
+            <textarea class="texto_desencriptado" readonly></textarea>
             <!-- <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Orci montes, sit et diam risus scelerisque vitae est.
                 Tortor maecenas nunc ut laoreet. Eget diam mauris quam
                 quisque ut eget fringilla sit elit. Libero, sodales duis
@@ -40,7 +40,7 @@
         </section>
     </main>
     <footer>
-        <p>Desarrollado por: Fernando luis Hoyos Hernandez</p>
+        <p>Desarrollado por: Fernando Luis Hoyos Hernandez</p>
         <p>2024</p>
     </footer>
     <script src="js/app.js"></script>
