add animaciones boton copiar

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
         <section class="contenido__seccion__desencriptado">
             <textarea class="texto_desencriptado" readonly></textarea>
-            <button class="" id="btn-copiar">Copiar</button>
+            <button class="" id="btn-copiar"><span class="texto_boton_copiar">Copiar</span></button>
         </section>
     </main>
     <footer>
