--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </section>
     </main>
     <footer>
-        <p>Desarrollado por: Fernando Luis Hoyos Hernandez</p>
+        <p>Hecho por: Fernando Luis Hoyos Hernandez</p>
         <p>2024</p>
     </footer>
     <script src="js/app.js"></script>
