--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador de texto</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <main class="contenido">
@@ -33,8 +34,16 @@
         </section>
     </main>
     <footer>
-        <p>Hecho por: Fernando Luis Hoyos Hernandez</p>
-        <p>2024</p>
+        <p>Dev: Fernando Luis Hoyos Hernandez</p>
+        <div class="iconos-redes">
+            <a href="https://github.com/fernandolhoyosh" target="_blank" aria-label="GitHub">
+                <i class="fa-brands fa-github fa-bounce"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/fernandolhoyosh/" target="_blank" aria-label="LinkedIn">
+                <i class="fa-brands fa-linkedin fa-bounce"></i>
+            </a>
+        </div>
+        <p>© 2024</p>
     </footer>
     <script src="js/app.js"></script>
 </body>
